--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <link rel="icon" href="https://ashypls.com/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantasia</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+
   </body>
 </html>
